# Inspire-cli

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  README.en.md  README.md  llm.txt  pyproject.toml
.forgejo/workflows/: ci.yml  deps-check.yml  release.yml
.github/workflows/: ci.yml  deps-check.yml  release.yml
docs/: FEEDBACK-CLAUDE-CODE.md  GUIDE.md  SKILL.md  inspire.env.template  启智 分布式训练 OpenAPI 文档.md  启智 模型部署 OpenAPI 文档.md  启智 高性能计算 OpenAPI 文档.md
inspire/: __init__.py  inspire_api_control.py
inspire/api/: __init__.py  openapi.py  openapi_client.py  openapi_client_auth.py  openapi_client_http.py  openapi_client_jobs.py  openapi_client_nodes.py  openapi_resources.py  openapi_resources_display.py  openapi_resources_manager.py  openapi_resources_match.py  openapi_resources_parse.py  openapi_resources_specs.py
scripts/: bootstrap_inspire_env.sh
tests/: test_bridge_exec.py  test_bridge_scp.py  test_cli_commands.py  test_cli_smoke.py  test_completion_helpers.py  test_compute_group_autoselect.py  test_config_files.py  test_config_properties.py  test_config_set.py  test_cpu_compute_group_fixes.py  test_debug_logging.py  test_forge_utils.py  test_hpc_commands.py  test_image_commands.py  test_mount_command.py  test_notebook_commands.py  test_notebook_create_flow.py  test_notebook_jupyter.py  test_notebook_rtunnel_commands.py  test_notebook_rtunnel_flow.py  test_notebook_rtunnel_helpers.py  test_notebook_rtunnel_probe.py  test_notebook_rtunnel_verify.py  test_openapi_client_config.py  test_openapi_hpc_jobs.py  test_openapi_jobs.py  test_openapi_proxy_config.py  test_openapi_resource_manager.py  test_openapi_resource_workspace_specs.py  test_project_select_command.py  test_project_selection.py  test_proxy_command_inconsistency.py  test_resources_list_scope.py  test_resources_specs_command.py  test_rtunnel_binary.py  test_rtunnel_defaults.py  test_rtunnel_etxtbusy.py  test_ssh_exec.py  test_ssh_runtime_config.py  test_sync_command.py  (+11 more)
(+262 files in other folders)
