[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inspire-cli"
version = "0.2.3"
description = "CLI tool for the Inspire HPC training platform"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary - Inspire Platform Members Only"}
authors = [
    {name = "Inspire Platform Team"}
]
keywords = ["inspire", "hpc", "training", "cli", "machine-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "requests>=2.28.0",
    "click>=8.0.0",
    "playwright>=1.57.0",
    "tomli>=1.2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "ruff>=0.0.280",
]

[project.scripts]
inspire = "inspire.cli.main:cli"

[project.urls]
Documentation = "https://gitea.com/cyteena/inspire-cli"
Repository = "https://gitea.com/cyteena/inspire-cli"

[tool.setuptools]
packages = [
    "inspire",
    "inspire.api",
    "inspire.cli",
    "inspire.cli.commands",
    "inspire.cli.formatters",
    "inspire.cli.utils",
]

[tool.setuptools.package-data]
inspire = ["*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests requiring live API access",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
